--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEB_STATUS_4CCCF }}'
           projectId: web-status-4cccf
           entryPoint: fe
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
