--- a/fe/package.json
+++ b/fe/package.json
@@ -17,6 +17,7 @@
     "primereact": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "sass": "^1.69.5"
   },
