--- a/be/package.json
+++ b/be/package.json
@@ -1,19 +1,26 @@
 {
   "name": "telegram_bot",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js"
+    "watch": "tsc --watch",
+    "start": "npm run build && nodemon ./dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.7.2",
     "firebase": "^10.4.0",
-    "firebase-admin": "^11.10.1",
-    "node-telegram-bot-api": "^0.61.0"
+    "firebase-admin": "^12.1.1",
+    "node-telegram-bot-api": "^0.66.0"
+  },
+  "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.64.6",
+    "nodemon": "^3.1.3",
+    "tslint": "^6.1.3",
+    "typescript": "^5.4.5"
   }
 }
