--- a/be/package.json
+++ b/be/package.json
@@ -1,12 +1,13 @@
 {
   "name": "telegram_bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "App to monitor website status and send notifications by a telegram bot",
   "main": "index.js",
   "scripts": {
     "watch": "tsc --watch",
     "start": "npm run build && nodemon ./dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +16,15 @@
     "axios": "^1.7.2",
     "firebase": "^10.4.0",
     "firebase-admin": "^12.1.1",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node-telegram-bot-api": "^0.64.6",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.3",
+    "ts-jest": "^29.1.4",
     "tslint": "^6.1.3",
     "typescript": "^5.4.5"
   }
