--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd fe
+          npm ci
           npm run build
 
       - name: Deploy to Firebase Hosting
