--- a/fe/package.json
+++ b/fe/package.json
@@ -35,6 +35,7 @@
     "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
-    "vite": "^5.2.13"
+    "vite": "^5.2.13",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
